changes styles to homepage.css and a few minor in style.css

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,10 +1,41 @@
 
+
 hr {
     width: 80%;
 }
 
 form > button {
     width: 75px;
-    
     border-radius: 10%;
+    align-self: center;
+}
+
+section {
+    align-self: flex-start;
+    height: 400px;
+    background-color: white;
+    border: solid black 5px;
+    padding: 25px;
+    font-family: 'Noto Serif', serif;
+}
+
+body {
+    background-image: url('../assets/football_xs_os.jpg');
+    background-size: cover;
+}
+
+li {
+    text-align: justify;
+    text-justify: inter-word;
+    padding-right: 20px;
+}
+
+h2 {
+    margin: 0;
+    padding: 0;
+}
+
+hr {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
