--- a/styles/game-page.css
+++ b/styles/game-page.css
@@ -3,8 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
 
-    background-image: url('../assets/football_xs_os.jpg');
-    background-size: cover;
+    
 }
 
 main {
@@ -14,14 +13,14 @@ main {
     align-items: center;
 
     min-width: 800px;
-    max-width: 1000px;
+    
     min-height: 500px;
-
+    width: 100%;
+    height: 100%;
     overflow: auto;
-
     background-color: ghostwhite;
-
-    border-radius: 2%;
+    background-image: url('../assets/football_xs_os.jpg');
+    background-size: cover;
 }
 
 section h2, section h3 {
