--- a/styles/about.css
+++ b/styles/about.css
@@ -12,6 +12,14 @@ h1 {
     color: white;
 }
 
+img {
+    width: 100px;
+}
+
+#bio-pic {
+    text-align: center;
+}
+
 .spread {
     display: flex;
 }
@@ -22,4 +30,5 @@ h1 {
     border: black 1px solid;
     border-radius: 5px;
     margin: 10px;
+    padding: 5px;
 }
