--- a/styles/results.css
+++ b/styles/results.css
@@ -1,5 +1,4 @@
 main {
-    
     background-image: url('../assets/football_xs_os.jpg');
     background-size: cover;
     width: 100%;
@@ -9,7 +8,19 @@ main {
 }
 
 canvas {
-    background-color: white;
-    width: 400px;
-    height: 400px;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    border: solid grey 10px;
+}
+
+.graph {
+    background-color: grey;
+    text-align: center;
+}
+
+#main-content {
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
