--- a/styles/home.css
+++ b/styles/home.css
@@ -7,6 +7,7 @@ main {
 
 section {
     width: 400px;
+    min-height: 420px;
     margin: 50px;
 }
 
@@ -26,7 +27,7 @@ form > button {
 
 section {
     align-self: flex-start;
-    height: 400px;
+    height: auto;
     background-color: white;
     border: solid black 5px;
     padding: 25px;
