--- a/styles/about.css
+++ b/styles/about.css
@@ -5,17 +5,23 @@ main {
     align-items: center;
     background-image: url('../assets/football_xs_os.jpg');
     background-size: cover;
-    height: 100%;
-    
+    height: 100%; 
 }
 
 h1 {
     color: white;
-    margin-top: 50px;
+    text-align: center;
+    text-decoration: underline;
+}
+
+h2{
+    align-items: center;
+    justify-items: center;
 }
 
 img {
     width: 100px;
+    height: 100px;
 }
 
 #bio-pic {
@@ -40,4 +46,11 @@ img {
     display: none;
     display: none;
 
+}
+
+#page-content{
+    background-color: grey;
+    margin-top: 50px;
+    border: 3px solid black;
+    
 }
