--- a/styles/game-page.css
+++ b/styles/game-page.css
@@ -66,6 +66,10 @@ button {
 
 .player-info {
     align-items: center;
+    background: white;
+    margin-left: 20px;
+    border-radius: 5px;
+    background-color: lightseagreen;
 
     width: 300px;
 }
