--- a/styles/header.css
+++ b/styles/header.css
@@ -6,7 +6,7 @@ header {
     box-shadow: var(--shadow);
     position: relative;
     border-bottom: 1px solid black;
-    background: linear-gradient(90deg, rgba(55,61,94,1) 0%, rgba(45,65,70,1) 100%);
+    background: linear-gradient(140deg, rgb(24, 31, 82) 0%, rgb(123, 228, 179) 100%);
 }
 
 .header-label{
@@ -14,7 +14,7 @@ header {
 }
 
 .header-h1{
-    color: #3F58DF;
+    color: #dadff5;
     font-size: 3em;
     justify-items: center;
 }
