--- a/styles/results.css
+++ b/styles/results.css
@@ -1,6 +1,9 @@
-main {
+html {
     background-image: url('../assets/football_xs_os.jpg');
     background-size: cover;
+}
+
+main {
     width: 100%;
     height: 100%;
     display: flex;
@@ -18,11 +21,23 @@ canvas {
 .graph {
     background-color: grey;
     text-align: center;
-}
-
-#main-content {
+    margin: 5px;
     margin-top: 50px;
     border-radius: 20px;
     min-width: 600px;
     max-height: 150px;
+}
+
+h2 {
+    text-align: center;
+    background-color: gray;
+    padding: 30px;
+    margin: 0;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+#no-data {
+    padding: 65px;
+
 }
