--- a/styles/header.css
+++ b/styles/header.css
@@ -16,7 +16,10 @@ header {
 
 .header-h1{
     color: #dadff5;
-    font-size: 3em;
+    font-size: 60px;
+    font-family: 'Titillium Web', sans-serif;
+    margin-top: 10px;
+    margin-bottom: 10px;
     justify-items: center;
 }
 
